# recetas-app

./: .env.example  .replit  manage.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--recetas-app-git-main-gunicorn-bind-0-0-0-0-5002-kitchen-wsgi-application-2025-09-15-17-44--1757976267586_1757976267588.txt  Pasted--recetas-app-git-main-python-manage-py-migrate-Traceback-most-recent-call-last-File-ho-1757976573579_1757976573580.txt  Pasted-KeyError-at-admin-kitchen-recipeingredient-Request-Method-GET-Request-URL-http-19a8d8f2-17-1757948006741_1757948006741.txt
kitchen/: admin.py  models.py  serializers.py  urls.py  views.py
kitchen/migrations/: 0001_initial.py
kitchen/static/kitchen/css/: style.css
kitchen/static/kitchen/js/: create-recipe.js  home.js  ingredients.js  main.js  recipes.js
kitchen/templates/kitchen/: base.html  create_recipe.html  home.html  ingredients.html  recipes.html
kitchen_management/: asgi.py  settings.py  urls.py  wsgi.py
